# gemini-engine

./: CHANGELOG.md  Cargo.toml  README.md
examples/: complex-scene.rs  donut.rs  game-loop-root.rs  multi-movement.rs  quick-start.rs  self-resizing.rs  spinning-cube.rs
src/: lib.rs
src/ascii/: alignment.rs  animated_sprite.rs  mod.rs  sprite.rs  text.rs
src/containers/: collision_container.rs  mod.rs  pixel_container.rs  shader.rs  visibility_toggle.rs
src/core/: mod.rs
src/core/colchar/: colour.rs  mod.rs  modifier.rs
src/gameloop/: macros.rs  mod.rs  sleep_fps.rs  with_root.rs
src/mesh3d/: components.rs  mesh3d_presets.rs  mod.rs
src/primitives/: helpers.rs  line.rs  mod.rs  pixel.rs  polygon.rs  rect.rs  triangle.rs
src/view/: mod.rs  scale_to_fit.rs  term_utils.rs  wrapping.rs
src/view3d/: mod.rs  projected_face.rs  render_helpers.rs
src/view3d/display_mode/: lighting.rs  mod.rs
src/view3d/render_helpers/: index_face.rs  projected_face.rs  projected_vertex.rs
